# nmly

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  helper.c  helper.h  nmly.c  nmly.h
src/: helper.c  helper.h  nmly.c  nmly.h  string.c  string.h
tests/: main.c
